--- a/server/pom.xml
+++ b/server/pom.xml
@@ -2,13 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.gb</groupId>
-    <artifactId>files-storage5</artifactId>
+    <artifactId>server</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>client</module>
-        <module>server</module>
-        <module>commons</module>
-    </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -25,7 +20,6 @@
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
@@ -54,13 +48,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.16</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.36.0.3</version>
+            <groupId>ru.gb</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
-
     </dependencies>
     <build>
         <plugins>
@@ -82,7 +75,7 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                           <mainClass>ru.gb.App</mainClass>
+                            <mainClass>ru.gb.App</mainClass>
                         </configuration>
                     </execution>
                 </executions>
