--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -15,6 +15,13 @@
             <artifactId>javafx-controls</artifactId>
             <version>13</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-transport -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport</artifactId>
+            <version>4.1.76.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
